# metaheur

./: CMakeLists.txt
data/: a280.tsp
src/: CMakeLists.txt  main.cpp
src/algoritmo/: metodo.h  test.h
src/algoritmo/genetico/: basico.h  chc.h  multimodal.h
src/algoritmo/hormigas/: sch.h  sh.h  she.h
src/algoritmo/trayectoria/: busquedaaleatoria.h  busquedalocal.h  busquedatabu.h  enfriamientosimulado.h
src/problema/: qap.h  tsp.h
src/problema/representacion/: .def.h.swp  orden.h
src/problema/representacion/base/: arraybase.h  base.h
src/test/: qaptest.cpp  tsptest.cpp
src/util/: bincode.h  matriz.h  timer.h
